Fix issue #40: Increase Gap Between 'Admin logs' and 'Privacy & terms'

--- a/src/client/stylesheets/style.scss
+++ b/src/client/stylesheets/style.scss
@@ -893,3 +893,14 @@ div[class~=collapsing]+div[class=card-header] .accordion-arrow {
 .rouge :hover {
 	color : #963873;
 }
+
+.small {
+	margin : 20px;
+}
+
+.text-center{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: space-around;
+}
